refactoring the angular structure

--- a/assets/sass/app/profile/profile.scss
+++ b/assets/sass/app/profile/profile.scss
@@ -12,12 +12,34 @@ $brand-body-color: #015;
     width: 100%;
     height: 400px;
     overflow: hidden;
+    position:relative;
     img {
         object-fit: cover;
         display: block;
         width: 100vw;
         height: 100vh;
         background-color: $backgroundColor;
+    }
+    i, .cssload-container {
+        cursor: pointer;
+        background: white;
+        padding: 16px;
+        border: 1px solid #ddd;
+        border-radius: 50px;
+        position: absolute;
+        right: 47%;
+        top: 50%;
+        font-size: 2em;
+        opacity: 0.5;
+    }
+    .cssload-container {
+        top: 54.2%;
+        right: 48.3%;
+    }
+    .cssload-whirlpool {
+        position: relative;
+        top: 26px;
+        left: 26px;
     }
 }
 
