--- a/views/partials/header-fix-sign-in-menu.html
+++ b/views/partials/header-fix-sign-in-menu.html
@@ -1,3 +1,4 @@
+<script src='/assets/js/app/partials/header-sign-in-menu/notifications.js'></script>
 <header role="banner" class="navbar-fixed-top" id="fh5co-header">
     <div class="container">
         <nav class="navbar navbar-default">
@@ -23,7 +24,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <div class="dropdown dropdown-notification">
+                        <div class="dropdown dropdown-notification" ng-controller="HeaderSignInMenuNotificationsController">
                             <button
                                 class="btn btn-lg btn-notification"
                                 data-toggle="dropdown"
