--- a/views/account/pages/activation/profile.html
+++ b/views/account/pages/activation/profile.html
@@ -2,6 +2,9 @@
 
 {% block head %}
 {% parent %}
+<script>
+    angular.module("deeployer", []);
+</script>
 <script src='/assets/js/app/account/activation/profile.js'></script>
 {% endblock %}
 
