--- a/views/profile/pages/profile.html
+++ b/views/profile/pages/profile.html
@@ -4,10 +4,15 @@
 {% block head %}
 {% parent %}
 <link rel="stylesheet" href="/assets/css/app/profile/profile.css">
+<script>
+    angular.module("deeployer", []);
+</script>
+<script src='/assets/js/app/profile/cover.js'></script>
 <script src='/assets/js/app/profile/avatar.js'></script>
 <script>
     window.angularControllerValues = {
-        avatar: '[[user.avatar]]'
+        avatar: '[[user.avatar]]',
+        cover: '[[user.coverPicture]]'
     };
 </script>
 {% endblock %}
@@ -19,29 +24,37 @@
 {% block content %}
 {% include '../../partials/header-fix-sign-in-menu.html' %}
     {% set userProfile = user.profile|last %}
-    <div class="timeline-cover">
-        <img src="[[ user.coverPicture || '' ]]" class="img-responsive">
+    <div class="timeline-cover" ng-controller="ProfileCoverController">
+        <img
+            class="img-responsive"
+            ng-mouseover="editCoverIconStatus = true"
+            ng-mouseleave="editCoverIconStatus = false"
+            ng-src="{{ cover }}"
+            ng-click="coverClick()"
+            cover-image-onload-waiting>
+        <i
+            ng-mouseover="editCoverIconStatus = true" 
+            ng-show="!waitingCover && editCoverIconStatus"
+            ng-click="coverClick()"
+            class="glyphicon glyphicon-edit"></i>
+        <div ng-show="waiting" class="cssload-container">
+            <div class="cssload-whirlpool"></div>
+        </div>
     </div>
     <nav class="navbar navbar-default" role="navigation">
         <div class="col-md-3">
         </div>
-        <div class="col-md-6">
+        <div class="col-md-9">
             <div class="navbar-header">
-                <!-- <div>
-                    <a class="navbar-brand" href="#">Follower</a>
-                </div> -->
-            </div>
-        </div>
-
-        <div class="col-md-3">
-            <div class="navbar-header">
-                <!-- <div>
-                    <a class="navbar-brand" href="#">Follower</a>
-                </div> -->
+                <div>
+                    <a class="navbar-brand" href="#">About</a>
+                    <a class="navbar-brand" href="#">Posts</a>
+                    <a class="navbar-brand" href="#">Followers</a>
+                </div>
             </div>
         </div>
     </nav>
-    <div class="row row-timeline">
+    <div class="row-timeline">
         <div class="col-md-3">
             <div class="text-center avatar-wrapper" ng-controller="ProfileAvatarController">
                 <img
@@ -78,7 +91,7 @@
         </div>
         <div class="col-md-6">
             <ul class="list-group">
-                <li class="list-group-item well">
+                <!-- <li class="list-group-item well">
                     <form class="form-horizontal" role="form">
                         <div class="form-group" style="padding:14px;">
                             <textarea class="form-control" placeholder="first step of executing..."></textarea>
@@ -103,16 +116,16 @@
                             <li><a href="#"><i class="glyphicon glyphicon-align-right"></i></a></li>
                         </ul>
                     </form>
-                </li>
+                </li> -->
             </ul>
         </div>
         <!-- right side -->
         <div class="col-md-3">
             <ul class="list-group">
                 <li class="list-group-item">
-                    <h4>Friends</h4>
+                    <h4>Invite</h4>
                     <p>
-                        invite your friends here to 
+                        Invite your friends here to earn +20 points per each person.
                     </p>
                 </li>
             </ul>
