--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -957,3 +957,16 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
 }
+
+.dropdown-header {
+    &.dropdown-wait {
+        height:35px;
+        .cssload-container {
+            height: 100%;
+            width: 100%;
+            .cssload-whirlpool {
+                margin: -10px 0 0 -5%;
+            }
+        }
+    }
+}
