--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -343,6 +343,9 @@ h1, h2, h3, h4, h5, h6 {
                         padding-left: 6px;
                     }
                 }
+                li:nth-last-child(2) {
+                    border-bottom: none !important;
+                }
             }
         }
     }
