--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -308,6 +308,8 @@ h1, h2, h3, h4, h5, h6 {
         }
         .dropdown-notification {
             ul {
+                max-height: 300px;
+                overflow-y: scroll;
                 li {
                     font-size: 13px;
                     clear: both;
