--- a/views/partials/header-fix-sign-in-menu.html
+++ b/views/partials/header-fix-sign-in-menu.html
@@ -73,6 +73,7 @@
                                 </span>
                             </button>
                             <ul
+                                scroll
                                 class="dropdown-menu"
                                 aria-labelledby="dLabel">
                                 <li
@@ -83,9 +84,9 @@
                                 </li>
                                 <li
                                     ng-show="
-                                    list.length === 0
-                                        ? !notificationsWaiting
-                                        : true
+                                        list.length === 0
+                                            ? !notificationsWaiting
+                                            : true
                                     "
                                     ng-repeat="notify in list"
                                     >
@@ -93,11 +94,12 @@
                                         class="img-rounded dropdown-avatar"
                                         width="32px"
                                         height="32px"
-                                        src="[[ user.avatar ]]"
+                                        src="/assets/images/common/notifications/notify.png"
                                     > 
                                     <div class="notify-desc">
                                         <i class="glyphicon glyphicon-user"></i>
-                                        <a href="#">Mahan</a> Liked your Idea about <a href="#">making the would a better ...</a>
+                                        <b>{{ notify.attributes.text }}</b>
+                                        <!-- <a href="#">Mahan</a> Liked your Idea about <a href="#">making the would a better ...</a> -->
                                     </div>
                                     <div class="clearfix"></div>
                                 </li>
