--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -314,6 +314,7 @@ h1, h2, h3, h4, h5, h6 {
                     font-size: 13px;
                     clear: both;
                     padding: 0 10px 0;
+                    padding-bottom: 5px;
                     width: 275px;
                     border-bottom: 1px #dfdfdf solid;
                     &:nth-last-child(1) {
