--- a/views/partials/header-fix-sign-in-menu.html
+++ b/views/partials/header-fix-sign-in-menu.html
@@ -4,12 +4,12 @@
         <nav class="navbar navbar-default">
             <div class="navbar-header">
                 <a
-                        href="#"
-                        class="js-fh5co-nav-toggle fh5co-nav-toggle"
-                        data-toggle="collapse"
-                        data-target="#navbar"
-                        aria-expanded="false"
-                        aria-controls="navbar"><i></i>
+                    href="#"
+                    class="js-fh5co-nav-toggle fh5co-nav-toggle"
+                    data-toggle="collapse"
+                    data-target="#navbar"
+                    aria-expanded="false"
+                    aria-controls="navbar"><i></i>
                 </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -97,9 +97,7 @@
                                         src="/assets/images/common/notifications/notify.png"
                                     > 
                                     <div class="notify-desc">
-                                        <i class="glyphicon glyphicon-user"></i>
-                                        <b>{{ notify.attributes.text }}</b>
-                                        <!-- <a href="#">Mahan</a> Liked your Idea about <a href="#">making the would a better ...</a> -->
+                                        {{ notify.attributes.text }}
                                     </div>
                                     <div class="clearfix"></div>
                                 </li>
