--- a/views/profile/pages/profile.html
+++ b/views/profile/pages/profile.html
@@ -46,10 +46,10 @@
         </div>
         <div class="col-md-9">
             <div class="navbar-header">
-                <div>
-                    <a class="navbar-brand" href="#">About</a>
-                    <a class="navbar-brand" href="#">Posts</a>
-                    <a class="navbar-brand" href="#">Followers</a>
+                <div class="profile-list-links">
+                    <a class="navbar-brand" href="/profile">Posts</a>
+                    <a class="navbar-brand" href="/profile/about">About</a>
+                    <a class="navbar-brand" href="/profile/followers">Followers</a>
                 </div>
             </div>
         </div>
