other people's profile

--- a/views/error.html
+++ b/views/error.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/layout.html' %}
 
+{% block title %}[[ error.status ]] | [[ message ]]{% endblock %}
+
 {% block head %}
 {% parent %}
 {% endblock %}
