--- a/views/partials/profile/about.html
+++ b/views/partials/profile/about.html
@@ -8,26 +8,41 @@
             gender   : '[[ userProfile.gender ]]',
         };
         userProfile = cloneObject(userProfileDefault);
-        rowVisibility = {
-            name   : 'show',
-            phone  : 'show',
-            country: 'show',
-            gender : 'show'
-        };
-        waiting = {
-            name   : false,
-            phone  : false,
-            country: false,
-            gender : false
-        };
+        {% if signedInUser.username === requestedUser.username %}
+            rowVisibility = {
+                name   : 'show',
+                phone  : 'show',
+                country: 'show',
+                gender : 'show'
+            };
+            waiting = {
+                name   : false,
+                phone  : false,
+                country: false,
+                gender : false
+            };
+        {% endif %}
     ">
     <ul class="list-group">
         <li class="list-group-item">
             <h4><i class="glyphicon glyphicon-user"></i>&nbsp;About [[ user.username | title]]</h4>
-            {% include 'about/gender.html'  %}
-            {% include 'about/name.html'  %}
-            {% include 'about/country.html'  %}
-            {% include 'about/phone.html'  %}
+            {% if signedInUser.username === requestedUser.username %}
+                {% include 'about/gender.html'  %}
+                <div class="clearfix"></div>
+                {% include 'about/name.html'  %}
+                <div class="clearfix"></div>
+                {% include 'about/country.html'  %}
+                <div class="clearfix"></div>
+                {% include 'about/phone.html'  %}
+            {% else %}
+                {% include 'about/locked/gender.html'  %}
+                <div class="clearfix"></div>
+                {% include 'about/locked/name.html'  %}
+                <div class="clearfix"></div>
+                {% include 'about/locked/country.html'  %}
+                <div class="clearfix"></div>
+                {% include 'about/locked/phone.html'  %}
+            {% endif %}
         </li>
     </ul>
 </div>
