--- a/views/profile/pages/profile.html
+++ b/views/profile/pages/profile.html
@@ -42,29 +42,32 @@
         </div>
     </div>
     <nav class="navbar navbar-default" role="navigation">
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-9">
-            <div class="navbar-header">
-                <div class="profile-list-links">
-                    <a
-                        class="navbar-brand {% if page === 'posts' %} active{% endif %}"
-                        href="/profile{% if signedInUser.username !== requestedUser.username %}/[[ requestedUser.username ]]{% endif %}"
-                    >
-                        Posts
-                    </a>
-                    <a
-                        class="navbar-brand {% if page === 'about' %} active{% endif %}"
-                        href="/profile{% if signedInUser.username !== requestedUser.username %}/[[ requestedUser.username ]]{% endif %}/about"
-                    >
-                        About
-                    </a>
-                    <a
-                        class="navbar-brand {% if page === 'followers' %} active{% endif %}"
-                        href="/profile{% if signedInUser.username !== requestedUser.username %}/[[ requestedUser.username ]]{% endif %}/followers"
-                    >
-                        Followers
-                    </a>
+        <div class="row-timeline">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="navbar-header">
+                    <div class="profile-list-links">
+                        <a
+                            class="navbar-brand {% if page === 'posts' %} active{% endif %}"
+                            href="/profile{% if signedInUser.username !== requestedUser.username %}/[[ requestedUser.username ]]{% endif %}"
+                        >
+                            Posts
+                        </a>
+                        <a
+                            class="navbar-brand {% if page === 'about' %} active{% endif %}"
+                            href="/profile{% if signedInUser.username !== requestedUser.username %}/[[ requestedUser.username ]]{% endif %}/about"
+                        >
+                            About
+                        </a>
+                        <a
+                            class="navbar-brand {% if page === 'followers' %} active{% endif %}"
+                            href="/profile{% if signedInUser.username !== requestedUser.username %}/[[ requestedUser.username ]]{% endif %}/followers"
+                        >
+                            Followers
+                        </a>
+                    </div>
+                </div>
+                <div class="navbar-header navbar-right text-right">
+                    {% include '../../partials/profile/follow-button.html' %}
                 </div>
             </div>
         </div>
