--- a/views/partials/profile/about.html
+++ b/views/partials/profile/about.html
@@ -25,7 +25,7 @@
     ">
     <ul class="list-group">
         <li class="list-group-item">
-            <h4><i class="glyphicon glyphicon-user"></i>&nbsp;About [[ user.username | title]]</h4>
+            <h4><i class="glyphicon glyphicon-user"></i>&nbsp;About [[ requestedUser.username | title]]</h4>
             {% if signedInUser.username === requestedUser.username %}
                 {% include 'about/gender.html'  %}
                 <div class="clearfix"></div>
