--- a/views/partials/modals/new-post.html
+++ b/views/partials/modals/new-post.html
@@ -28,6 +28,7 @@
                             (maxContentLength - content.length) < 0 ||
                             (maxContentLength - content.length) === maxContentLength
                         "
+                        ng-click="sendPost()"
                         type="button"
                         class="btn btn-info btn-post pull-right"
                     >Post</button>
