--- a/views/partials/header-fix-sign-in-menu.html
+++ b/views/partials/header-fix-sign-in-menu.html
@@ -122,11 +122,11 @@
                                     </a>
                                 </li>
                                 <li role="separator" class="divider"></li>
-                                <li>
-                                    <a href="/account/settings">
-                                        <i class="glyphicon glyphicon-cog"></i> Settings
-                                    </a>
-                                </li>
+                                <!--<li>-->
+                                    <!--<a href="/account/settings">-->
+                                        <!--<i class="glyphicon glyphicon-cog"></i> Settings-->
+                                    <!--</a>-->
+                                <!--</li>-->
                                 <li>
                                     <a href="/support">
                                         <i class="glyphicon glyphicon-cog"></i> Support
