--- a/views/partials/modals/new-post.html
+++ b/views/partials/modals/new-post.html
@@ -18,6 +18,7 @@
                 <div class="text-area">
                     <textarea
                         ng-model="content"
+                        ng-disabled="waiting"
                         rows="4"
                         class="form-control"
                     ></textarea>
@@ -25,13 +26,22 @@
                 <div class="action-area">
                     <button
                         ng-disabled="
+                            waiting ||
                             (maxContentLength - content.length) < 0 ||
                             (maxContentLength - content.length) === maxContentLength
                         "
                         ng-click="sendPost()"
                         type="button"
                         class="btn btn-info btn-post pull-right"
-                    >Post</button>
+                    >
+                        <img
+                            ng-show="waiting"
+                            src="/assets/images/common/waiting.gif"
+                            ng-show="waiting.country"
+                        >
+                        Post
+                    </button>
+
                     <div class="pull-right">
                         &nbsp;
                     </div>
